Programación/AppJavaFx/ITV_CITAS/src/main/kotlin/com/example/itv_citas/errors/VehicleError.kt
package com.example.itv_citas.errors

sealed class VehicleError(val message: String) {
    object VehicleNotFound: VehicleError("Error Vehicle not found")
}